📦 refactor: base-crud-component improvements.

--- a/front-end/src/app/admin/pages/inventory-crud/inventory-crud.component.html
+++ b/front-end/src/app/admin/pages/inventory-crud/inventory-crud.component.html
@@ -1,10 +1,4 @@
-<cms-base-crud
-  titleName="Estoque"
-  [loadingComplete]="loadingComplete"
-  (paginatorEvent)="refreshPaginator()"
-  (load)="loadData()"
-  (add)="openDialog()"
->
+<cms-base-crud titleName="Estoque" (load)="loadData()" (add)="openDialog()">
   <div slot="filter" class="inner-wrapper">
     <form class="genre-form" [formGroup]="form">
       <div class="controlers-wrapper">
