--- a/front-end/src/app/admin/pages/base-crud/base-crud.component.html
+++ b/front-end/src/app/admin/pages/base-crud/base-crud.component.html
@@ -35,7 +35,10 @@
 <div
   class="title-group subtitle"
   [ngStyle]="{
-    display: loadingComplete && paginator?.length ? 'table' : 'none'
+    display:
+      (dataSource.loading$ | async) === false && paginator?.length
+        ? 'table'
+        : 'none'
   }"
 >
   <h1 class="mat-h1">
@@ -44,12 +47,28 @@
   </h1>
 </div>
 
-<ng-content select="[slot=body]"></ng-content>
+<div class="spinner-container" *ngIf="(dataSource.loading$ | async) === true">
+  <mat-spinner></mat-spinner>
+</div>
+
+<div
+  [ngStyle]="{
+    display:
+      (dataSource.loading$ | async) === false && paginator?.length
+        ? 'block'
+        : 'none'
+  }"
+>
+  <ng-content select="[slot=body]"></ng-content>
+</div>
 
 <mat-paginator
   [ngStyle]="{
-    display: loadingComplete && paginator?.length ? 'block' : 'none'
+    display:
+      (dataSource.loading$ | async) === false && paginator?.length
+        ? 'block'
+        : 'none'
   }"
-  [pageSizeOptions]="[5, 10, 20]"
   showFirstLastButtons
+  [pageSizeOptions]="pageSizeOption"
 ></mat-paginator>
