--- a/front-end/src/app/admin/pages/comic-crud/comic-crud.component.html
+++ b/front-end/src/app/admin/pages/comic-crud/comic-crud.component.html
@@ -1,48 +1,31 @@
-<div class="title-group">
-  <h1 class="title">
-    <i class="fa fa-tag" aria-hidden="true"></i>
-    Quadrinhos
-  </h1>
-  <cms-add-button
-    (clickEvent)="openDialog()"
-    [buttonText]="'Novo Quadrinho'"
-  ></cms-add-button>
-</div>
-<mat-divider></mat-divider>
-
-<h2 class="filter">
-  <i class="fas fa-filter"></i>
-  Filtros
-</h2>
-<mat-divider class="filter__bottom-divider"></mat-divider>
-
-<div class="inner-wrapper">
-  <form class="genre-form" [formGroup]="form">
-    <div class="controlers-wrapper">
-      <mat-form-field>
-        <input
-          type="number"
-          matInput
-          placeholder="ID"
-          formControlName="comicID"
-        />
-      </mat-form-field>
-
-      <mat-form-field>
-        <input matInput placeholder="Titulo" formControlName="title" />
-      </mat-form-field>
-
-      <mat-form-field>
-        <input matInput placeholder="Descrição" formControlName="description" />
-      </mat-form-field>
-
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title> Filtros Avançados </mat-panel-title>
-        </mat-expansion-panel-header>
+<cms-base-crud
+  titleName="Quadrinho"
+  (load)="loadData()"
+  (add)="openDialog()"
+  [addButtonText]="'Novo Quadrinho'"
+>
+  <div slot="filter" class="inner-wrapper">
+    <form class="genre-form" [formGroup]="form">
+      <div class="controlers-wrapper">
+        <mat-form-field>
+          <input
+            type="number"
+            matInput
+            placeholder="ID"
+            formControlName="comicID"
+          />
+        </mat-form-field>
 
         <mat-form-field>
-          <input matInput placeholder="Preço" formControlName="price" />
+          <input matInput placeholder="Titulo" formControlName="title" />
+        </mat-form-field>
+
+        <mat-form-field>
+          <input
+            matInput
+            placeholder="Descrição"
+            formControlName="description"
+          />
         </mat-form-field>
 
         <mat-form-field>
@@ -54,167 +37,141 @@
           />
         </mat-form-field>
 
-        <mat-form-field>
-          <input
-            type="number"
-            matInput
-            placeholder="Páginas"
-            formControlName="pages"
-          />
-        </mat-form-field>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title> Filtros Avançados </mat-panel-title>
+          </mat-expansion-panel-header>
 
-        <cms-dropdown-list
-          [isNew]="true"
-          [placeholder]="'Autores'"
-          [getFilteredDataCallback]="getAuthorByNameCallback.bind(this)"
-          [dataControl]="form.controls.authors"
-          idKeyObject="authorID"
-          valueKeyObject="name"
-        ></cms-dropdown-list>
+          <mat-form-field>
+            <input matInput placeholder="Preço" formControlName="price" />
+          </mat-form-field>
 
-        <cms-dropdown-list
-          [isNew]="true"
-          [placeholder]="'Categorias'"
-          [getFilteredDataCallback]="getGenresByNameCallback.bind(this)"
-          [dataControl]="form.controls.genres"
-          idKeyObject="genreID"
-          valueKeyObject="description"
-        ></cms-dropdown-list>
-      </mat-expansion-panel>
+          <mat-form-field>
+            <input
+              type="number"
+              matInput
+              placeholder="Páginas"
+              formControlName="pages"
+            />
+          </mat-form-field>
 
-      <div class="full-wrapper button-wrapper">
-        <div class="button-wrapper">
-          <button
-            (click)="loadData(form.value)"
-            class="search-button"
-            mat-raised-button
-            color="primary"
-          >
-            Pesquisar
-          </button>
-        </div>
+          <cms-dropdown-list
+            [isNew]="true"
+            [placeholder]="'Autores'"
+            [getFilteredDataCallback]="getAuthorByNameCallback.bind(this)"
+            [dataControl]="form.controls.authors"
+            idKeyObject="authorID"
+            valueKeyObject="name"
+          ></cms-dropdown-list>
+
+          <cms-dropdown-list
+            [isNew]="true"
+            [placeholder]="'Categorias'"
+            [getFilteredDataCallback]="getGenresByNameCallback.bind(this)"
+            [dataControl]="form.controls.genres"
+            idKeyObject="genreID"
+            valueKeyObject="description"
+          ></cms-dropdown-list>
+        </mat-expansion-panel>
       </div>
-    </div>
-  </form>
-</div>
-
-<div
-  class="title-group subtitle"
-  [ngStyle]="{
-    display: loadingComplete && paginator.length ? 'table' : 'none'
-  }"
->
-  <h1 class="mat-h1">
-    <i class="fa fa-list-alt" aria-hidden="true"></i>
-    Lista de Quadrinhos
-  </h1>
-</div>
-
-<div class="container">
-  <div class="spinner-container" *ngIf="dataSource.loading$ | async">
-    <mat-spinner></mat-spinner>
+    </form>
   </div>
 
-  <p
-    [ngStyle]="{
-      display: loadingComplete && !paginator.length ? 'block' : 'none'
-    }"
-    class="no-data"
-  >
-    nenhum registro encontrado.
-  </p>
+  <div class="container" slot="body">
+    <!-- <div class="spinner-container" *ngIf="dataSource.loading$ | async">
+      <mat-spinner></mat-spinner>
+    </div> -->
 
-  <table
-    mat-table
-    [dataSource]="dataSource"
-    [ngStyle]="{
+    <p
+      [ngStyle]="{
+        display: loadingComplete && !paginator.length ? 'block' : 'none'
+      }"
+      class="no-data"
+    >
+      nenhum registro encontrado.
+    </p>
+
+    <!-- [ngStyle]="{
       display: loadingComplete && paginator.length ? 'table' : 'none'
-    }"
-  >
-    <ng-container matColumnDef="ComicID">
-      <th mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let element">{{ element.comicID }}</td>
-    </ng-container>
+    }" -->
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="ComicID">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let element">{{ element.comicID }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="Titulo">
-      <th mat-header-cell *matHeaderCellDef>Titulo</th>
-      <td mat-cell *matCellDef="let element">{{ element.title }}</td>
-    </ng-container>
+      <ng-container matColumnDef="Titulo">
+        <th mat-header-cell *matHeaderCellDef>Titulo</th>
+        <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+      </ng-container>
 
-    <ng-container matColumnDef="Descrição">
-      <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Descrição</th>
-      <td
-        fxHide
-        fxShow.gt-md
-        class="description"
-        mat-cell
-        *matCellDef="let element"
-      >
-        {{ element.description }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Preço">
-      <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Preço</th>
-      <td fxHide fxShow.gt-md mat-cell *matCellDef="let element">
-        R$ {{ element.price | number: "2.2" }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Ano">
-      <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Ano</th>
-      <td fxHide fxShow.gt-md mat-cell *matCellDef="let element">
-        {{ element.year }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Páginas">
-      <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Páginas</th>
-      <td fxHide fxShow.gt-md mat-cell *matCellDef="let element">
-        {{ element.pages }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Ações">
-      <th mat-header-cell *matHeaderCellDef>Ações</th>
-      <td mat-cell *matCellDef="let element; let i = index">
-        <button
-          mat-icon-button
-          [matMenuTriggerFor]="menu"
-          aria-label="Example icon-button with a menu"
+      <ng-container matColumnDef="Descrição">
+        <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Descrição</th>
+        <td
+          fxHide
+          fxShow.gt-md
+          class="description"
+          mat-cell
+          *matCellDef="let element"
         >
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="openDialog(element)">
-            <mat-icon color="primary">edit</mat-icon>
-            <span>Editar</span>
-          </button>
-          <button mat-menu-item (click)="deleteItem(element)">
-            <mat-icon color="warn">delete</mat-icon>
-            <span>Deletar</span>
-          </button>
-        </mat-menu>
-      </td>
-    </ng-container>
+          {{ element.description }}
+        </td>
+      </ng-container>
 
-    <tr
-      [@listStagger]="paginator?.length"
-      mat-header-row
-      *matHeaderRowDef="displayedColumns"
-    ></tr>
-    <tr
-      [@listStagger]="paginator?.length"
-      mat-row
-      *matRowDef="let row; columns: displayedColumns"
-    ></tr>
-  </table>
+      <ng-container matColumnDef="Preço">
+        <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Preço</th>
+        <td fxHide fxShow.gt-md mat-cell *matCellDef="let element">
+          R$ {{ element.price | number: "2.2" }}
+        </td>
+      </ng-container>
 
-  <mat-paginator
-    [ngStyle]="{
-      display: loadingComplete && paginator.length ? 'block' : 'none'
-    }"
-    [pageSizeOptions]="[5, 10, 20]"
-    showFirstLastButtons
-  ></mat-paginator>
-</div>
+      <ng-container matColumnDef="Ano">
+        <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Ano</th>
+        <td fxHide fxShow.gt-md mat-cell *matCellDef="let element">
+          {{ element.year }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Páginas">
+        <th fxHide fxShow.gt-md mat-header-cell *matHeaderCellDef>Páginas</th>
+        <td fxHide fxShow.gt-md mat-cell *matCellDef="let element">
+          {{ element.pages }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Ações">
+        <th mat-header-cell *matHeaderCellDef>Ações</th>
+        <td mat-cell *matCellDef="let element; let i = index">
+          <button
+            mat-icon-button
+            [matMenuTriggerFor]="menu"
+            aria-label="Example icon-button with a menu"
+          >
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="openDialog(element)">
+              <mat-icon color="primary">edit</mat-icon>
+              <span>Editar</span>
+            </button>
+            <button mat-menu-item (click)="deleteItem(element)">
+              <mat-icon color="warn">delete</mat-icon>
+              <span>Deletar</span>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
+
+      <tr
+        [@listStagger]="paginator?.length"
+        mat-header-row
+        *matHeaderRowDef="displayedColumns"
+      ></tr>
+      <tr
+        [@listStagger]="paginator?.length"
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+      ></tr>
+    </table>
+  </div>
+</cms-base-crud>
