🚀 perf: image load

--- a/front-end/src/app/core/components/comic/comic.component.html
+++ b/front-end/src/app/core/components/comic/comic.component.html
@@ -1,5 +1,5 @@
 <div class="comic">
-  <img class="comic__image" [src]="comic.image.preview" alt="Image" />
+  <img class="comic__image" [src]="comic.imagePreview" alt="Image" />
   <span class="comic__price">R$ {{ comic.price | number: "2.2" }}</span>
   <h2 class="comic__title">{{ comic.title }}</h2>
 
