--- a/front-end/src/app/core/pages/comic-detail/comic-detail.component.html
+++ b/front-end/src/app/core/pages/comic-detail/comic-detail.component.html
@@ -1,6 +1,6 @@
 <div class="comic">
   <div class="comic__container-info">
-    <img class="comic__image" [src]="comic?.image?.preview" alt="Image" />
+    <img class="comic__image" [src]="comic?.imagePreview" alt="Image" />
     <div>
       <header>
         <h1 class="comic__title">{{ comic?.title }}</h1>
