🐛 fix: tyni-mobile layout.

--- a/front-end/src/app/order/pages/order/order.component.html
+++ b/front-end/src/app/order/pages/order/order.component.html
@@ -113,10 +113,16 @@
         <div class="order__items__table__header">
           <span class="order__items__table__header__item">Quantidade</span>
           <span class="order__items__table__header__item">Item</span>
-          <span fxHide.lt-sm class="order__items__table__header__item"
+          <span
+            fxHide="true"
+            fxShow.gt-md
+            class="order__items__table__header__item"
             >Descrição</span
           >
-          <span fxHide.lt-sm class="order__items__table__header__item"
+          <span
+            fxHide="true"
+            fxShow.gt-md
+            class="order__items__table__header__item"
             >Subtotal</span
           >
         </div>
