--- a/front-end/src/app/authentication/pages/register/register.component.html
+++ b/front-end/src/app/authentication/pages/register/register.component.html
@@ -4,49 +4,12 @@
     <mat-card-subtitle>faça o seu cadastro com a gente</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <form [formGroup]="form" *ngIf="form">
-      <mat-form-field>
-        <input
-          type="email"
-          matInput
-          placeholder="Email"
-          formControlName="email"
-        />
-        <mat-error>
-          <span cmsShowValidation="email"></span>
-        </mat-error>
-      </mat-form-field>
-
-      <mat-form-field>
-        <input
-          type="password"
-          matInput
-          placeholder="Senha"
-          formControlName="password"
-        />
-        <mat-error>
-          <span cmsShowValidation="password"></span>
-        </mat-error>
-      </mat-form-field>
-
-      <mat-form-field>
-        <input
-          type="password"
-          matInput
-          placeholder="Confirmação senha"
-          formControlName="passwordCheck"
-          (keyup.enter)="register(form.value)"
-        />
-        <mat-error>
-          <span cmsShowValidation="passwordCheck"></span>
-        </mat-error>
-      </mat-form-field>
-    </form>
+    <register-form></register-form>
   </mat-card-content>
   <mat-card-actions>
     <button
-      (click)="register(form.value)"
-      [disabled]="form.invalid"
+      (click)="register(registerForm.form.value)"
+      [disabled]="registerForm.form.invalid"
       mat-raised-button
       color="primary"
     >
