🐛 fix: params method call

--- a/front-end/src/app/authentication/presentation/components/login-form/login-form.component.html
+++ b/front-end/src/app/authentication/presentation/components/login-form/login-form.component.html
@@ -12,7 +12,7 @@
       matInput
       placeholder="Senha"
       formControlName="password"
-      (keyup.enter)="login(form.value)"
+      (keyup.enter)="login()"
     />
     <mat-error>
       <span cmsShowValidation="password"></span>
