--- a/front-end/src/app/authentication/presentation/pages/register/register.component.html
+++ b/front-end/src/app/authentication/presentation/pages/register/register.component.html
@@ -8,7 +8,7 @@
   </mat-card-content>
   <mat-card-actions>
     <button
-      (click)="register(registerForm.form.value)"
+      (click)="register()"
       [disabled]="registerForm.form.invalid"
       mat-raised-button
       color="primary"
