--- a/front-end/src/app/core/components/header/header.component.html
+++ b/front-end/src/app/core/components/header/header.component.html
@@ -2,11 +2,7 @@
   <nav class="menu">
     <ul class="menu-list">
       <li>
-        <button
-          class="menu-list__item menu-list__item--mobile"
-          mat-icon-button
-          (click)="openSide.emit(true)"
-        >
+        <button class="menu-list__item menu-list__item--mobile" mat-icon-button (click)="openSide.emit(true)">
           <mat-icon>menu</mat-icon>
         </button>
       </li>
@@ -19,25 +15,18 @@
       <li class="menu-list__item" routerLinkActive="menu-list__item--active">
         <a class="menu-list__link" routerLink="/sobre">Sobre</a>
       </li>
-      <li
-        *ngIf="!isLoggedIn"
-        class="menu-list__item"
-        routerLinkActive="menu-list__item--active"
-      >
+      <li *ngIf="!isLoggedIn" class="menu-list__item" routerLinkActive="menu-list__item--active">
         <a class="menu-list__link" routerLink="/authentication"> Login </a>
       </li>
       <li *ngIf="isLoggedIn" (click)="logout()" class="menu-list__item">
         <a class="menu-list__link" routerLink="/authentication"> Sair </a>
       </li>
-      <li
-        *ngIf="isAdmin"
-        class="menu-list__item"
-        routerLinkActive="menu-list__item--active"
-      >
+      <li *ngIf="isAdmin" class="menu-list__item" routerLinkActive="menu-list__item--active">
         <a class="menu-list__link" routerLink="/admin">Admin</a>
       </li>
     </ul>
   </nav>
+
   <div class="header__tools">
     <cms-toggle-theme></cms-toggle-theme>
 
